# cliphist

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
.github/workflows/: build-and-release.yml
cmake/: InstallWindowsRuntimeDeps.cmake.in  Warnings.cmake
docs/: architecture.md  cli.md  github-release.md  windows-packaging.md
packaging/: cliphist.desktop.in
sql/: schema.sql
src/: gui_main.cpp  main.cpp
src/app/: Application.cpp  Application.hpp  DaemonRunner.cpp  DaemonRunner.hpp  DaemonRunnerStub.cpp  DesktopSession.cpp  DesktopSession.hpp  DesktopSessionStub.cpp  ProgramEntry.cpp  ProgramEntry.hpp  QtClipboardRuntime.cpp  QtClipboardRuntime.hpp  cliphist.rc
src/cli/: CommandParser.cpp  CommandParser.hpp  PrintFormatter.cpp  PrintFormatter.hpp
src/core/: ClipboardEntry.hpp  Deduplicator.cpp  Deduplicator.hpp  RetentionPolicy.cpp  RetentionPolicy.hpp
src/db/: Database.cpp  Database.hpp  HistoryRepository.cpp  HistoryRepository.hpp
src/ui/: AppIcon.cpp  AppIcon.hpp  SimpleUi.cpp  SimpleUi.hpp
src/util/: ArchiveStore.cpp  ArchiveStore.hpp  Hash.cpp  Hash.hpp  Logger.cpp  Logger.hpp  Path.cpp  Path.hpp  Time.cpp  Time.hpp
src/x11/: ClipboardWatcher.cpp  ClipboardWatcher.hpp  StatusTrayIcon.cpp  StatusTrayIcon.hpp
tests/integration/: test_cli_list.cpp  test_repository.cpp
tests/unit/: test_app_icon.cpp  test_command_parser.cpp  test_dedup.cpp  test_retention.cpp
